--- a/README.org
+++ b/README.org
@@ -1,4 +1,6 @@
 * RDiff
 #+BEGIN_QUOTE
-A CLI for displaying the textual differences between two files.
+A simple and fast CLI for colourizing differences between two files
 #+END_QUOTE
+
+[[./example.png]]
